# celeste

./: .gitignore  Cargo.toml  IMPLEMENTED_FEATURES.md  README.md
.codex/skills/celeste-level-design/: SKILL.md  room_template.md
.codex/skills/celeste-movement/: SKILL.md
assets/maps/: chapter_00.json.bak  chapter_01.json  chapter_01.json.bak  chapter_02.json  chapter_02.json.bak  chapter_03.json  chapter_04.json  chapter_05.json  editor_saved.json  editor_saved.json.bak
assets/shaders/: hair_outline.wgsl  weather.wgsl
src/: app_state.rs  audio.rs  components.rs  constants.rs  editor.rs  level.rs  main.rs  main_menu.rs  menu.rs  scene.rs  utils.rs
src/systems/: animation.rs  effects.rs  grass.rs  hair.rs  level.rs  mod.rs  player.rs  weather.rs
