[package]
name = "tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.1"
bevy_framepace = "0.18.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3